--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,12 +8,12 @@ packages = [{include = "poetry_migration_example"}]
 
 [tool.poetry.dependencies]
 python = "^3.11"
-asyncpg = "==0.27.0"
-fastapi = "==0.88.0"
-pandas = "==1.5.2"
-redis = "==4.3.5"
-sqlalchemy = "==1.4.44"
-uvicorn = "==0.20.0"
+asyncpg = "^0.27.0"
+fastapi = "^0.88.0"
+pandas = "^1.5.2"
+redis = "^4.3.5"
+sqlalchemy = "^1.4.44"
+uvicorn = "^0.20.0"
 
 
 [tool.poetry.dev-dependencies]
